--- a/index.html
+++ b/index.html
@@ -1,1 +1,130 @@
-"My Page" 
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8"/>
+    <title>TransAlt
+</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="description" content="This project is a proof of concept implementation of async computation workflows composition with non determenistic choice, merge and bind based on immutable state with lock detection. Uses ideas from Stm,Hopac,Joinads."/>
+    <meta name="author" content="Shelin Anton"/>
+
+    <script src="https://code.jquery.com/jquery-1.8.0.js"></script>
+    <script src="https://code.jquery.com/ui/1.8.23/jquery-ui.js"></script>
+    <script src="https://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/js/bootstrap.min.js"></script>
+    <link href="https://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/css/bootstrap-combined.min.css" rel="stylesheet"/>
+
+    <link type="text/css" rel="stylesheet" href="/TransAlt/content/style.css" />
+    <script type="text/javascript" src="/TransAlt/content/tips.js"></script>
+    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+      <script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="container">
+      <div class="masthead">
+        <ul class="nav nav-pills pull-right">
+          <li><a href="http://fsharp.org">fsharp.org</a></li>
+          <li><a href="http://github.com/hodzanassredin/TransAlt">github page</a></li>
+        </ul>
+        <h3 class="muted"><a href="/TransAlt/index.html">TransAlt</a></h3>
+      </div>
+      <hr />
+      <div class="row">
+        <div class="span9" id="main">
+          
+<h1><a name="TransAlt" class="anchor" href="#TransAlt">TransAlt</a></h1>
+
+<p>Documentation</p>
+
+<div class="row">
+  <div class="span1"></div>
+  <div class="span6">
+    <div class="well well-small" id="nuget">
+      The TransAlt library can be <a href="https://nuget.org/packages/TransAlt">installed from NuGet</a>:
+      <pre>PM> Install-Package TransAlt</pre>
+    </div>
+  </div>
+  <div class="span1"></div>
+</div>
+
+<h2><a name="Example" class="anchor" href="#Example">Example</a></h2>
+
+<p>This example demonstrates using a function defined in this sample library.</p>
+
+<table class="pre"><tr><td class="lines"><pre class="fssnip">
+<span class="l">1: </span>
+<span class="l">2: </span>
+<span class="l">3: </span>
+<span class="l">4: </span>
+<span class="l">5: </span>
+</pre>
+</td>
+<td class="snippet"><pre class="fssnip">
+<span class="prep">#r</span> <span class="s">&quot;TransAlt/TransAlt.dll&quot;</span>
+<span class="k">open</span> <span onmouseout="hideTip(event, 'fs1', 1)" onmouseover="showTip(event, 'fs1', 1)" class="i">TransAlt</span>
+<span class="k">open</span> <span onmouseout="hideTip(event, 'fs2', 2)" onmouseover="showTip(event, 'fs2', 2)" class="i">Alt</span>
+
+<span onmouseout="hideTip(event, 'fs3', 3)" onmouseover="showTip(event, 'fs3', 3)" class="t">Alt</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs4', 4)" onmouseover="showTip(event, 'fs4', 4)" class="f">choose</span>(<span onmouseout="hideTip(event, 'fs5', 5)" onmouseover="showTip(event, 'fs5', 5)" class="f">always</span>(<span class="n">1</span>), <span onmouseout="hideTip(event, 'fs5', 6)" onmouseover="showTip(event, 'fs5', 6)" class="f">always</span>(<span class="n">2</span>)) <span class="o">|&gt;</span> <span onmouseout="hideTip(event, 'fs3', 7)" onmouseover="showTip(event, 'fs3', 7)" class="t">Alt</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs6', 8)" onmouseover="showTip(event, 'fs6', 8)" class="f">pick</span> ()
+</pre>
+</td>
+</tr>
+</table>
+
+<p>Some more info</p>
+
+<h2><a name="Samples-amp-documentation" class="anchor" href="#Samples-amp-documentation">Samples &amp; documentation</a></h2>
+
+<p>The library comes with comprehensible documentation. 
+It can include tutorials automatically generated from <code>*.fsx</code> files in <a href="https://github.com/hodzanassredin/TransAlt/tree/master/docs/content">the content folder</a>. 
+The API reference is automatically generated from Markdown comments in the library implementation.</p>
+
+<ul>
+<li><p><a href="tutorial.html">Tutorial</a> contains a further explanation of this sample library.</p></li>
+<li><p><a href="reference/index.html">API Reference</a> contains automatically generated documentation for all types, modules
+and functions in the library. This includes additional brief samples on using most of the
+functions.</p></li>
+</ul>
+
+<h2><a name="Contributing-and-copyright" class="anchor" href="#Contributing-and-copyright">Contributing and copyright</a></h2>
+
+<p>The project is hosted on <a href="https://github.com/hodzanassredin/TransAlt">GitHub</a> where you can <a href="https://github.com/hodzanassredin/TransAlt/issues">report issues</a>, fork 
+the project and submit pull requests. If you're adding a new public API, please also 
+consider adding <a href="https://github.com/hodzanassredin/TransAlt/tree/master/docs/content">samples</a> that can be turned into a documentation. You might
+also want to read the <a href="https://github.com/hodzanassredin/TransAlt/blob/master/README.md">library design notes</a> to understand how it works.</p>
+
+<p>The library is available under Public Domain license, which allows modification and 
+redistribution for both commercial and non-commercial purposes. For more information see the 
+<a href="https://github.com/hodzanassredin/TransAlt/blob/master/LICENSE.txt">License file</a> in the GitHub repository.</p>
+
+<div class="tip" id="fs1">namespace TransAlt</div>
+<div class="tip" id="fs2">module Alt<br /><br />from TransAlt</div>
+<div class="tip" id="fs3">Multiple items<br />union case Alt.Alt: (State.ProcessId * Transaction&lt;&#39;s,&#39;r&gt; -&gt; Async&lt;unit&gt;) * State.IsMutatesState -&gt; Alt&lt;&#39;s,&#39;r&gt;<br /><br />--------------------<br />module Alt<br /><br />from TransAlt<br /><br />--------------------<br />type Alt&lt;&#39;s,&#39;r (requires reference type)&gt; = | Alt of (ProcessId * Transaction&lt;&#39;s,&#39;r&gt; -&gt; Async&lt;unit&gt;) * IsMutatesState<br /><br />Full name: TransAlt.Alt.Alt&lt;_,_&gt;</div>
+<div class="tip" id="fs4">val choose : one:Alt&lt;&#39;s,&#39;r&gt; * two:Alt&lt;&#39;s,&#39;r&gt; -&gt; Alt&lt;&#39;s,&#39;r&gt; (requires reference type)<br /><br />Full name: TransAlt.Alt.choose</div>
+<div class="tip" id="fs5">val always : v:&#39;a -&gt; Alt&lt;&#39;b,&#39;a&gt; (requires reference type)<br /><br />Full name: TransAlt.Alt.always</div>
+<div class="tip" id="fs6">val pick : state:&#39;a -&gt; alt:Alt&lt;&#39;a,&#39;b&gt; -&gt; Async&lt;TransactionResult&lt;&#39;b&gt;&gt; (requires reference type)<br /><br />Full name: TransAlt.Alt.pick</div>
+
+        </div>
+        <div class="span3">
+          <img src="/TransAlt/img/logo.png" alt="F# Project" style="width:150px;margin:10px" />  
+          <ul class="nav nav-list" id="menu" style="margin-top: 20px;">
+            <li class="nav-header">TransAlt</li>
+            <li><a href="/TransAlt/index.html">Home page</a></li>
+            <li class="divider"></li>
+            <li><a href="http://nuget.org/packages/TransAlt">Get Library via NuGet</a></li>
+            <li><a href="http://github.com/hodzanassredin/TransAlt">Source Code on GitHub</a></li>
+            <li><a href="/TransAlt/license.html">License</a></li>
+            <li><a href="/TransAlt/release-notes.html">Release Notes</a></li>
+            
+            <li class="nav-header">Getting started</li>
+            <li><a href="/TransAlt/tutorial.html">Sample tutorial</a></li>
+
+            <li class="nav-header">Documentation</li>
+            <li><a href="/TransAlt/reference/index.html">API Reference</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <a href="http://github.com/hodzanassredin/TransAlt"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" alt="Fork me on GitHub"/></a>
+  </body>
+  </html>
