Update generated documentation for version 0.0.1-beta002

--- a/release-notes.html
+++ b/release-notes.html
@@ -32,9 +32,11 @@
       <div class="row">
         <div class="span9" id="main">
           
-<h4><a name="0-0-1-beta-October-24-2013" class="anchor" href="#0-0-1-beta-October-24-2013">0.0.1-beta - October 24 2013</a></h4>
+<h4><a name="0-0-1-beta002-June-01-2015" class="anchor" href="#0-0-1-beta002-June-01-2015">0.0.1-beta002 - June 01 2015</a></h4>
 
 <ul>
+<li>Improved quality of docs.
+#### 0.0.1-beta - June 01 2015</li>
 <li>Initial release created from fsx file</li>
 </ul>
 
