--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 <h2><a name="Example" class="anchor" href="#Example">Example</a></h2>
 
-<p>This example demonstrates using a function defined in this sample library.</p>
+<p>This example demonstrates lock detection and resolution.</p>
 
 <table class="pre"><tr><td class="lines"><pre class="fssnip">
 <span class="l"> 1: </span>
