--- a/tutorial.html
+++ b/tutorial.html
@@ -163,8 +163,8 @@ So you have to define lenses which dramatically simplify state changes.</p>
 
 <p>Result is (Ok (null, 1), queue(channel []))</p>
 
-<p>Why immutability? Because it is simple to share state between concurrent threads in started by choose combinator and isolate changes from each other.
- And internally state keeper is able to resolve blocking problems and fstop execution when workflows are deadlocked.</p>
+<p>Why immutability? Because it is simple to share state between concurrent threads started by choose combinator and isolate changes from each other.
+ And internally state keeper is able to resolve blocking problems and stop execution when workflows are deadlocked.</p>
 
 <h1><a name="Builders" class="anchor" href="#Builders">Builders</a></h1>
 
